--- a/templates/home.html
+++ b/templates/home.html
@@ -1,71 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NilaSoft - Streaming Engineering Passion</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <style>
-    body {
-      font-family: sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-    }
-
-    header {
-      background-color: rgb(200, 200, 200);;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-
-    nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-    }
-
-    nav li {
-      margin: 0 10px;
-    }
-
-    nav a {
-      color: rgb(50, 50, 50);
-      text-decoration: none;
-      padding: 10px 15px;
-      border-radius: 5px;
-    }
-
-    nav a:hover {
-      background-color: rgb(100, 100, 100);
-      color: rgb(220, 220, 220);
-    }
-
-    main {
-      padding: 20px;
-      text-align: center;
-    }
   </style>
+  <title>NilaSoft - Streaming Engineering Passion</title>
 </head>
 <body>
-  <header>
+  <header class="container mt-4 mb-4">
     <div>
       <img src="static/logo-wide-title.png" alt="NilaSoft Logo" width="300">
-    </div>
+    
+      <nav class="navbar navbar-expand-lg bg-body-tertiary mb-4">
+        <ul class="nav">
+          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="/services">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="/industries">Industries</a></li>
+          <li class="nav-item"><a class="nav-link"href="/contact">Contact</a></li>
+        </ul>
+      </nav>
+      </div>
   </header>
-  <nav>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/services">Services</a></li>
-      <li><a href="/industries">Industries</a></li>
-      <li><a href="/contact">Contact</a></li>
-    </ul>
-  </nav>
-  <main>
-    <h2>Welcome to NilaSoft, Your Partner in Semiconductor Distinction</h2>
-    <p>We are engineers who are passionate about taking on any challenges. Our goal is to be the most trusted engineering solution partner. We follow the ‘customer first’ motto and keep our customers happy and satisfied.</p>
-  </main>
+  <div class="container">
+    <main>
+      <h2>Welcome to NilaSoft, Your Partner in Semiconductor Distinction</h2>
+      <p>We use semiconductor excellence to create innovative and transformative solutions for the future. With 20 years of experience, we are engineering pioneers who improve industries and lives.</p>
+    </main>
+  </div>
 </body>
 </html>
